# flash-attention-windows-5090-fa4-shim

./: .gitignore  README.md
cutlass_runtime/: README.md  pyproject.toml
cutlass_runtime/src/: _probe_helpers.py  fcntl.py
cutlass_runtime/src/cutlass/: __init__.py  cutlass_dsl.py  pipeline.py
cutlass_runtime/src/cutlass/_mlir/: __init__.py  ir.py
cutlass_runtime/src/cutlass/_mlir/dialects/: llvm.py  (+5 more)
cutlass_runtime/src/cutlass/base_dsl/: __init__.py  arch.py  tvm_ffi_builder.py  typing.py
cutlass_runtime/src/cutlass/cute/: __init__.py  _compile_bridge.py  _native_backend.py  _native_bwd_helpers_backend.cpp  _native_bwd_helpers_backend.py  _native_bwd_helpers_setup.py  _native_combine_backend.cpp  _native_combine_setup.py  _native_dense_backend.cpp  _native_dense_backend.py  _native_dense_bwd_backend.cpp  _native_dense_bwd_backend.py  _native_dense_bwd_setup.py  _native_dense_setup.py  _native_varlen_backend.cpp  _native_varlen_backend.py  _native_varlen_bwd_backend.cpp  _native_varlen_bwd_backend.py  _native_varlen_bwd_setup.py  _native_varlen_setup.py  _pycute_compat.py  _runtime_local_core.py  _tvm_ffi_args_spec_converter.py  runtime.py  tensor.py
cutlass_runtime/src/cutlass/utils/: __init__.py  blackwell_helpers.py  blockscaled_layout.py  hopper_helpers.py
flash_attn_runtime/: README.md  pyproject.toml
flash_attn_runtime/src/flash_attn/: __init__.py
flash_attn_runtime/src/flash_attn/cute/: __init__.py  interface.py
runtime_compat/: README.md  pyproject.toml
runtime_compat/src/cuda/: __init__.py
runtime_compat/src/nvidia_cutlass_dsl/: __init__.py
(+74 files in other folders)
